# pecan-finding-dory

./: .gitignore  AUTHORS.rst  HACKING.rst  README.md  README.rst  openstack-common.conf  setup.cfg  setup.py  tox.ini
dory/: bootstrap.py
dory/cmd/: server.py
dory/common/: cli.py
dory/etc/: dory.conf
dory/manager/: __init__.py  base.py
dory/manager/base/: __init__.py  controller.py  driver.py  todos.py
dory/manager/default/: __init__.py  controllers.py  driver.py  todos.py
dory/openstack/common/: gettextutils.py  importutils.py  jsonutils.py  log.py  strutils.py
dory/storage/base/: __init__.py  controller.py  driver.py  todos.py
dory/storage/memory/: __init__.py  controllers.py  driver.py  todos.py
dory/transport/: __init__.py  app.py  base.py
dory/transport/pecan/: __init__.py  driver.py
dory/transport/pecan/controllers/: __init__.py  base.py  root.py  todos.py  v1.py
dory/transport/pecan/hooks/: __init__.py  context.py
etc/: logging.conf
requirements/: common.txt  requirements.txt
tests/: test-requirements.txt
