[metadata]
name = dory
# version = 2014.7
summary = Finding Dory
description-file =
    README.rst
author = Racklanta
author-email = atl@lists.rackspace.com
home-page = https://one.rackspace.com/display/atlanta/Racklanta
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7

[files]
packages =
    dory

[entry_points]
console_scripts =
    dory-server = dory.cmd.server:run
    # dory-callable = 

dory.transport =
    pecan = dory.transport.pecan:Driver

dory.manager =
    default = dory.manager.default:Driver

dory.storage =
    memory = dory.storage.memory:Driver

[nosetests]
where=tests
verbosity=2

with-doctest = true

cover-package = dory
cover-html = true
cover-erase = true
cover-inclusive = true

; Disabled: Causes a bug in testtools to manifest.
; Trigger: self.assertX(condition), where condition == False.
;
; In "testtools/testresult/real.py" the traceback is set to
; None in _details_to_exc_info(), but the inspect_traceback()
; method in nose/inspector.py requires a traceback-like object.
;
; detailed-errors = 1

